--- a/calico-enterprise/visibility/elastic/flow/datatypes.mdx
+++ b/calico-enterprise/visibility/elastic/flow/datatypes.mdx
@@ -158,9 +158,9 @@ A flow log with aggregation level 0, **`no aggregation`**, might look like:
   }
 ```
 
-The log shows an incoming connection reported by the "Destination" node, allowed by a policy on port 80. The flows in the log are grouped using a 
-5-minute aggregation interval, calculated as **`end_time`** - **`start_time`**. During this interval, one flow (**`"num_flow": 1`**) was recorded. At 
-higher aggregation levels, flows from endpoints performing the same operation and originating from the same Deployment/ReplicaSet are grouped into a 
-single log. In this example, the common source endpoints are prefixed with **`access-6b687c8dcb-`**. Parameters like **`source_ip`** may be dropped 
-and set to **`null`** depending on the aggregation level. As aggregation levels increase, more flows will be grouped together based on your data. For 
-more details on aggregation levels, see [configure flow log aggregation](./aggregation.mdx).
+The log shows an incoming connection reported by the "Destination" node, allowed by a policy on port 80. The **`start_time`** and **`end_time`** 
+describe the aggregation period (5 min.) During this interval, one flow (**`"num_flow": 1`**) was recorded. At higher aggregation levels, flows from 
+endpoints performing the same operation and originating from the same Deployment/ReplicaSet are grouped into a single log. In this example, the 
+common source endpoints are prefixed with **`access-6b687c8dcb-`**. Parameters like **`source_ip`** may be dropped and set to **`null`** depending on 
+the aggregation level. As aggregation levels increase, more flows will be grouped together based on your data. For more details on aggregation 
+levels, see [configure flow log aggregation](./aggregation.mdx).
