Make packet capture opt-in changes

--- a/calico-cloud/visibility/packetcapture.mdx
+++ b/calico-cloud/visibility/packetcapture.mdx
@@ -48,10 +48,34 @@ For a simple use case workflow see, [Faster troubleshooting of microservices, co
 
 ## How To
 
+- [Enable packet capture](#enable-packet-capture)
 - [Packet capture in Service Graph](#packet-capture-in-service-graph)
 - [Packet capture using the command line](#packet-capture-using-the-command-line)
 - [Store and rotate capture files](#store-and-rotate-capture-files)
 - [Enforce RBAC for capture tasks for CLI users](#enforce-rbac-for-capture-tasks-for-cli-users)
+
+### Enable packet capture
+
+##### Enable packet capture using kubectl
+
+Create a PacketCaptureAPI custom resource, named `tigera-secure` in the cluster.
+
+```bash
+kubectl apply -f - <<EOF
+apiVersion: operator.tigera.io/v1
+kind: PacketCaptureAPI
+metadata:
+  name: tigera-secure
+EOF
+```
+
+##### Enable packet capture using Manager UI
+
+1. From the Manager UI, click the Service Graph to view the service graph diagram for your cluster.
+1. Right-click on any of the endpoints and select Initiate packet capture.
+1. Click Enable to activate the packet capture feature.
+
+<img src="/img/calico-enterprise/capture-enable.png" alt="PacketCapture" width="600"/>
 
 ### Packet capture in Service Graph
 
