--- a/calico-enterprise/getting-started/upgrading/upgrading-enterprise/kubernetes-upgrade-tsee/helm.mdx
+++ b/calico-enterprise/getting-started/upgrading/upgrading-enterprise/kubernetes-upgrade-tsee/helm.mdx
@@ -86,6 +86,30 @@ These steps differ based on your cluster type. If you are unsure of your cluster
    kubectl apply --server-side --force-conflicts -f {{filesUrl}}/manifests/eck-operator-crds.yaml
    ```
 
+1. If your cluster is v3.19 or older, update `values.yaml` with `packetCaptureAPI` enabled to true.
+
+    If your `values.yaml` configuration does not include `packetCaptureAPI`, add `packetCaptureAPI` to the configuration and set `enabled` to `true`.
+
+     ```
+     packetCaptureAPI:
+       enabled: true
+    ```
+
+    or
+
+    If you are using default `values.yaml`, copy the custom `values.yaml` and update packetCaptureAPI's `enabled`  to `true`. Then, replace `<path-to-values.yaml>` in the next step with this modified `values.yaml` for the helm upgrade.
+
+    <CodeBlock language='bash'>
+        {'{{version}}' === 'master'
+            ? (
+            `helm show values ./tigera-operator-v0.0.tgz >values.yaml`
+            )
+            : (
+            `helm show values ./tigera-operator-{{chart_version_name}}.tgz >values.yaml`
+            )
+        }
+    </CodeBlock>
+
 1. Run the Helm upgrade command for `tigera-operator` and make sure to either update `values.yaml` with your configuration or use custom `values.yaml` file:
 
   <CodeBlock language='bash'>
