--- a/calico-enterprise/getting-started/upgrading/upgrading-enterprise/openshift-upgrade.mdx
+++ b/calico-enterprise/getting-started/upgrading/upgrading-enterprise/openshift-upgrade.mdx
@@ -131,6 +131,18 @@ The steps differ based on your cluster type. If you are unsure of your cluster t
    EOF
    ```
 
+1. If your cluster is v3.19 or older, apply a new [PacketCaptureAPI](../../../reference/installation/api.mdx#operator.tigera.io/v1.PacketCaptureAPI)
+    CR to your cluster.
+
+   ```bash
+   oc apply -f - <<EOF
+   apiVersion: operator.tigera.io/v1
+   kind: PacketCaptureAPI
+   metadata:
+     name: tigera-secure
+   EOF
+   ```
+
 1. You can now monitor the upgrade progress with the following command:
 
    ```bash
