Clarify non-support for VXLAN/IPIP on "OpenStack"
As discussed in https://github.com/projectcalico/calico/pull/7009, this
non-support refers to when Calico is used as the networking plugin at the
OpenStack level, but NOT to when Calico is used as the Kubernetes CNI and
Kubernetes is running on OpenStack infrastructure.  This change clarifies that.

--- a/calico-cloud/networking/configuring/vxlan-ipip.mdx
+++ b/calico-cloud/networking/configuring/vxlan-ipip.mdx
@@ -36,7 +36,7 @@ Encapsulation of workload traffic is typically required only when traffic crosse
 
 **Not supported**
 
-- OpenStack
+- Calico for OpenStack (i.e. when Calico is used as the Neutron plugin)
 
 **Limitations**
 
