--- a/calico-enterprise_versioned_docs/version-3.19-1/networking/configuring/vxlan-ipip.mdx
+++ b/calico-enterprise_versioned_docs/version-3.19-1/networking/configuring/vxlan-ipip.mdx
@@ -36,7 +36,7 @@ Encapsulation of workload traffic is typically required only when traffic crosse
 
 **Not supported**
 
-- OpenStack
+- Calico for OpenStack (i.e. when Calico is used as the Neutron plugin)
 
 **Limitations**
 
