--- a/calico_versioned_docs/version-3.26/networking/configuring/vxlan-ipip.mdx
+++ b/calico_versioned_docs/version-3.26/networking/configuring/vxlan-ipip.mdx
@@ -35,7 +35,7 @@ Encapsulation of workload traffic is typically required only when traffic crosse
 
 **Not supported**
 
-- OpenStack
+- Calico for OpenStack (i.e. when Calico is used as the Neutron plugin)
 
 **Limitations**
 
