Removes from latest version

--- a/calico-cloud/image-assurance/creating-jira-issues-for-scan-results.mdx
+++ b/calico-cloud/image-assurance/creating-jira-issues-for-scan-results.mdx
@@ -2,40 +2,37 @@
 description: Creating Jira Issues for you scan results.
 ---
 
-# Creating Jira issues for vulnerable images
+import IconUser from '/img/icons/user-icon.svg';
 
-After your images have been found, the Manager UI can help facilitate remediation of your vulnerable through a Jira integration.
+# Create a Jira issue for your image scan results
 
-This integration allows you to create Jira Issues directly from the Scan Results page and attaches information about the
-vulnerable package found.
+You can create and assign Jira issues with information about vulnerabilties from your Image Assurance scan results.
 
-# Configuring the Jira Integration
-
-1. In the top right user icon in the Manager UI, click **Settings**.
-![jira-settings-link](/img/calico-cloud/ia-jira-show-settings-link.png)
-1. On the Settings page, click **Jira** tab.
-![ia-jira-credentials-tab-blank](/img/calico-cloud/ia-jira-credentials-tab-blank.png)
-1. Fill in the Username, Url, and API Token fields for the Jira account you want to integrate with.
-![ia-jira-credentials-page-filled-in](/img/calico-cloud/ia-jira-credentials-page-filled-in.png)
-
-Once the credentials are filled in, you can select the Jira Project to create Image Assurance Scan Result issues in.
-
-# Using the Jira Integration
-
-### Creating a new Jira issue for a Scan Result
-1. Click on the **Image Assurance** link in the nav bar to the left.
-1. Click on **All Scanned Images**.
-1. Click on the Scan Result you wish to create a Jira Issue for.
-1. Click on the **Add Ticket** button at the bottom of the Scan Result information in the top right.
-![ia-jira-add-ticket-link](/img/calico-cloud/ia-jira-add-ticket-link.png)
-1. Fill out the modal fields or leave the defaults as is.
-![ia-jira-modal](/img/calico-cloud/ia-jira-modal.png)
-1. Click **Create Jira Issue**
-
-The **Add Ticket** button will not be replaced with a link to the created Jira Issue.
 ![ia-jira-after-creation](/img/calico-cloud/ia-jira-after-creation.png)
+*Scan results detail with link to Jira issue.*
 
-The Jira issue created will include an attached CSV with all the discovered CVEs for the image.
+## Add Jira credentials to Calico Cloud 
 
-To remove the Jira Issue from the Scan Result, click on the X beside the ticket link.
-![ia-jira-after-creation-highlight-x](/img/calico-cloud/ia-jira-after-creation-highlight-x.png)
+You must add Jira user credentials to Calico Cloud to create issues for scanned images.
+
+***Prerequisites***
+
+* You have access to a Jira user account with permissions to create issues in a project.
+* For the Jira user account, you have:
+  * An Atlassian site URL. If you access Jira at the URL `https://<your-company>.atlassian.net/jira`, then your site URL is `<your-company>.atlassian.net`.
+  * An API token.
+    For details on how to get an API token, see [Manage API tokens for your Atlassian account](https://support.atlassian.com/atlassian-account/docs/manage-api-tokens-for-your-atlassian-account/).
+
+1. In Manager UI, the user icon <IconUser width="20"/>** > Settings**.
+1. Select the **Jira** tab, complete the fields with information about your Jira user account, and then click **Save**.
+1. Select the Jira project you want Calico Cloud to create issues for, and then click **Save**.
+
+## Create a Jira issue for a scanned image
+
+You can create and assign a Jira issue directly from the scan results information page for an image.
+
+1. From the Manager UI, click **Image Assurance&nbsp;>All Scanned Images**.
+1. Click an item in the list of scanned images to open a detailed view of the vulnerabilities in that image.
+1. In the **JIRA** section, click **Add Ticket**.
+1. In the **Add Jira issue** dialog, complete the fields and click **Create Jira issue**.
+   A link to the new Jira issue will be added to the detailed view page.
