--- a/calico-cloud_versioned_docs/version-19-1/users/create-custom-role-for-entra-id-group.mdx
+++ b/calico-cloud_versioned_docs/version-19-1/users/create-custom-role-for-entra-id-group.mdx
@@ -13,7 +13,8 @@ By managing membership in that security group, you can manage role-based access 
 ***Prerequisites***
 
 * You have owner or administrator permissions to the Calico Cloud Manager UI.
-* You set up Entra&nbsp;ID as your [identity provider](user-management.mdx#add-your-own-identity-provider).
+* You set up Entra&nbsp;ID as your identity provider for Calico Cloud.
+  To set up an identity provider for Calico Cloud, open a [support ticket](https://support.tigera.io).
 * You have administrator permissions for your organization in the Azure Portal.
 * You have the Object ID for an Entra&nbsp;ID security group.
 * The **Email** property for all users in the security group has a valid email address.
