Updates CC 19.3 with CE 3.19EP2 features

--- a/calico-cloud/image-assurance/scanners/cluster-scanner.mdx
+++ b/calico-cloud/image-assurance/scanners/cluster-scanner.mdx
@@ -53,9 +53,9 @@ Vulnerability detection consists of these steps:
 
 Complete the following steps for each managed cluster you want enabled with the cluster scanner:
 
-1. Modify the [Image Assurance](../reference/installation/ia-api.mdx#image-assurance.operator.tigera.io/v1.ImageAssuranceSpec) installation resource.
+1. Modify the [Image Assurance](../../reference/installation/ia-api.mdx#image-assurance.operator.tigera.io/v1.ImageAssuranceSpec) installation resource.
 
-```bash
+   ```bash
    kubectl edit imageassurance default
    ```
 
@@ -69,7 +69,7 @@ That’s it. The cluster scanner will start scanning images on running pods in t
 
 ### Customize scanner settings
 
-To change default settings, modify the [Image Assurance](../reference/installation/ia-api.mdx#image-assurance.operator.tigera.io/v1.ImageAssuranceSpec) installation resource.
+To change default settings, modify the [Image Assurance](../../reference/installation/ia-api.mdx#image-assurance.operator.tigera.io/v1.ImageAssuranceSpec) installation resource.
 
 - Container runtime socket path
 
@@ -83,7 +83,7 @@ To change default settings, modify the [Image Assurance](../reference/installati
 
 To specify which namespaces should be excluded from future scans, follow the following steps.
 
-- Modify your [Image Assurance](../reference/installation/ia-api.mdx#image-assurance.operator.tigera.io/v1.ImageAssuranceSpec) installation resource to include the `exclusions.namespaces` field. List each namespace you want to exclude.
+- Modify your [Image Assurance](../../reference/installation/ia-api.mdx#image-assurance.operator.tigera.io/v1.ImageAssuranceSpec) installation resource to include the `exclusions.namespaces` field. List each namespace you want to exclude.
 
 
 ```yaml
