--- a/calico-cloud/threat/web-application-firewall.mdx
+++ b/calico-cloud/threat/web-application-firewall.mdx
@@ -24,19 +24,19 @@ Historically, web application firewalls (WAFs) were deployed at the edge of your
 
 ### About {{prodname}} WAF
 
-WAF is deployed in your cluster along with Envoy DaemonSet. {{prodname}} proxies selected service traffic through Envoy, checking HTTP requests using the industry-standard 
-[ModSecurity](https://owasp.org/www-project-modsecurity-core-rule-set/) with OWASP Core Rule Set v3.3.5 modified for kubernetes workloads.
-<!--To review the rules deployed with the WAF, see [Ruleset files](https://github.com/tigera/operator/tree/master/pkg/render/applicationlayer/embed/coreruleset/rules).-->
+WAF is deployed in your cluster along with Envoy DaemonSet. {{prodname}} proxies selected service traffic through Envoy, checking HTTP requests using the industry-standard
+[ModSecurity](https://owasp.org/www-project-modsecurity-core-rule-set/) with OWASP Core Rule Set `v4.0.0-rc2` with some modifications for Kubernetes workloads.
 
-You simply enable WAF in Manager UI, and determine the services that you want to enable for WAF protection. By default WAF is set to `DetectionOnly` so no traffic will be denied until you are ready to turn on blocking mode. 
 
-Every request that WAF finds an issue with, will result in a Security Event being created for [you to review in the UI](#view-waf-events), regardless of whether the traffic was allowed or denied. This can greatly help in tuning later.  
+You simply enable WAF in Manager UI, and determine the services that you want to enable for WAF protection. By default WAF is set to `DetectionOnly` so no traffic will be denied until you are ready to turn on blocking mode.
+
+Every request that WAF finds an issue with, will result in a Security Event being created for [you to review in the UI](#view-waf-events), regardless of whether the traffic was allowed or denied. This can greatly help in tuning later.
 
 #### How WAF determines if a request should be allowed or denied
 
-If you configure WAF in blocking mode, WAF will use something called [anomaly scoring mode](https://coreruleset.org/docs/concepts/anomaly_scoring/) to determine if a request is allowed with `200 OK` or denied `403 Forbidden`. 
+If you configure WAF in blocking mode, WAF will use something called [anomaly scoring mode](https://coreruleset.org/docs/concepts/anomaly_scoring/) to determine if a request is allowed with `200 OK` or denied `403 Forbidden`.
 
-This works by matching a single HTTP request against all the configured WAF rules. Each rule has a score and WAF adds all the matched rule scores together, and compares it to the overall anomaly threshold score (100 by default). If the score is under the threshold the request is allowed and if the score is over the threshold the request is denied. Our WAF starts in detection mode only and with a high default scoring threshold so is safe to turn on and then [fine-tune the WAF](#fine-tuning-your-waf) for your specific needs in your cluster.
+This works by matching a single HTTP request against all the configured WAF rules. Each rule has a score and WAF adds all the matched rule scores together, and compares it to the overall anomaly threshold score (100 by default). If the score is under the threshold the request is allowed and if the score is over the threshold the request is denied. Our WAF starts in detection mode only and with a high default scoring threshold so is safe to turn on and then [fine-tune the WAF](#manage-your-waf) for your specific needs in your cluster.
 
 ## Before you begin
 
@@ -48,7 +48,7 @@ This works by matching a single HTTP request against all the configured WAF rule
 WAF cannot be used with:
   - Host-networked client pods
   - TLS traffic
-  - [LoadBalancer services](https://kubernetes.io/docs/concepts/services-networking/service/#loadbalancer)
+  - [LoadBalancer services](https://Kubernetes.io/docs/concepts/services-networking/service/#loadbalancer)
   - Egress gateways
   - WireGuard on AKS or EKS (unless you apply a specific kernel variable). Contact Support for help.
 
@@ -67,7 +67,7 @@ Enabling WAF for certain system services may result in an undesired cluster stat
   - `openshift-*`
 
 - Do not enable WAF for system services with the following combination of name and namespaces:
-  - name: `kubernetes`, namespace: `default`
+  - name: `Kubernetes`, namespace: `default`
   - name: `openshift`, namespace: `default`
   - name: `gatekeeper-webhook-service`, namespace: `gatekeeper-system`
 
@@ -82,7 +82,7 @@ If you modify the rules, it is recommended to keep your rules in git or similar 
 - [Enable WAF on your cluster](#enable-waf)
 - [Apply WAF to your services](#apply-waf)
 - [View WAF events](#view-waf-events)
-- [Fine-tuning your WAF](#fine-tuning-your-waf)
+- [Manage your WAF](#manage-waf-configuration)
 - [Disable WAF feature from your cluster](#disable-waf-feature-from-your-cluster)
 
 ### Enable WAF
@@ -92,7 +92,7 @@ If you don’t have an application to test WAF with or don’t want to use it ri
 we recommend that you install the [GoogleCloudPlatform/microservices-demo app](https://github.com/GoogleCloudPlatform/microservices-demo):
 
 ```bash
-kubectl apply -f https://raw.githubusercontent.com/GoogleCloudPlatform/microservices-demo/main/release/kubernetes-manifests.yaml
+kubectl apply -f https://raw.githubusercontent.com/GoogleCloudPlatform/microservices-demo/release/v0.7.0/release/Kubernetes-manifests.yaml
 ```
 
 #### Enable WAF using the CLI
@@ -120,15 +120,13 @@ spec:
 EOF
 ```
 
-#### Enable WAF using the UI
-
 On the Manager UI, click **Threat Defense**, **Web Application Firewall**, **Configure Web Application Firewall**.
 
  <img src="/img/calico-enterprise/waf-config-first-step.png" alt="WAF services" width="600"/>
 
 ### Apply WAF to services
 
-Now that you have deployed WAF in your cluster, you can select the services you want to protect from application layer attacks. 
+Now that you have deployed WAF in your cluster, you can select the services you want to protect from application layer attacks.
 
 If you have deployed the sample application, you can apply WAF on a service associated with your app, as follows:
 ```bash
@@ -137,15 +135,19 @@ kubectl annotate svc frontend -n default --overwrite projectcalico.org/l7-loggin
 Alternatively, you can use the Manager UI to apply WAF to the `frontend` service.
 
 In this example, we applied WAF to the `frontend` service. This means that every request that goes through the `frontend` service is inspected.
-However, the traffic is not blocked because the WAF rule is set to `DetectionOnly` by default. You can adjust rules and start blocking traffic by [fine-tuning your WAF](#fine-tuning-your-waf). 
+However, the traffic is not blocked because the WAF rule is set to `DetectionOnly` by default. You can adjust rules and start blocking traffic by [fine-tuning your WAF](#manage-your-waf).
 
 In the previous example, we applied WAF to the `frontend` service of the sample application. Here, we are
 applying WAF to a service of your own application.
 
 1. On the Manager UI, click **Threat Defense**, **Web Application Firewall**.
 2. Select the services you want WAF to inspect, and then click **Confirm Selections**.
-    
-   <img src="/img/calico-enterprise/waf-select-services.png" alt="WAF services" width="600"/>
+
+   <img
+    src='/img/calico-enterprise/waf-select-services-3.17.png'
+    alt='WAF services'
+    width='600'
+   />
 
 3. On the **Web Application Firewall** page, you can verify that WAF is enabled for a service by locating the service and checking that the **Status** column says **Enabled**.
 
@@ -154,139 +156,179 @@ applying WAF to a service of your own application.
 You have now applied WAF rule sets to your own services, and note that the traffic that goes through the selected services will be alerted but not blocked by default.
 
 #### Trigger a WAF event
-If you would like to trigger a WAF event for testing purposes, you can simulate an SQL injection attack inside your cluster by crafting a HTTP request with a query string that WAF will detect as an SQL injection attempt. 
-The query string in this example has some SQL syntax embedded in the text. This is harmless and for demo purposes, but WAF will detect this pattern and create an event for this HTTP request. 
+If you would like to trigger a WAF event for testing purposes, you can simulate an SQL injection attack inside your cluster by crafting a HTTP request with a query string that WAF will detect as an SQL injection attempt.
+The query string in this example has some SQL syntax embedded in the text. This is harmless and for demo purposes, but WAF will detect this pattern and create an event for this HTTP request.
 
 Run a simple curl command from any pod inside your cluster targeting a service you have selected for WAF protection e.g. from the demo app above we could attempt to send a simple HTTP request to the cartservice.
 ```
   curl http://cartservice/cart?artist=0+div+1+union%23foo*%2F*bar%0D%0Aselect%23foo%0D%0A1%2C2%2Ccurrent_user
 ```
 
-### Fine-tuning your WAF 
+### Manage WAF configuration
 
-#### Manage your rules
-The default rule sets work fine for most deployments. However, you can customize them to suit your requirements.
-Some common changes are detailed below, for example:
+Reviewing the default rule set config:
 
-- [Enabling blocking mode](#set-waf-rule-to-block-traffic)
-- [Changing the scoring threshold](#change-anomaly-scoring-threshold)
-- [Fine-tuning a rule](#change-other-default-settings)
-- [Disabling certain rules](#disable-certain-rules)
+```bash
+Include @coraza.conf-recommended
+Include @crs-setup.conf.example
+Include @owasp_crs/*.conf
 
-By default, {{prodname}} ships with Core Rule Set  v3.3.5 with the following setup files pre-loaded:
+SecRuleEngine DetectionOnly
+```
 
-- [tigera.conf](https://github.com/tigera/operator/blob/master/pkg/render/applicationlayer/embed/coreruleset/tigera.conf)
+The configuration file starts with importing the appropriate rule set config. We use Coraza WAF's recommended [Core Rule Set setup](https://coraza.io/docs/tutorials/coreruleset/) files:
 
-There are two ways to edit your rules. 
-1. Edit the configmap directly using kubectl. The config map combines all the rule files together, so you will need to know how to search and find the exact place in the configmap that you want to update. 
+1. Coraza recommended [configuration](https://github.com/corazawaf/coraza/blob/main/coraza.conf-recommended)
+1. The rest of the [coreruleset](https://github.com/coreruleset/coreruleset) files, currently [v4.0.0-rc2](https://github.com/coreruleset/coreruleset/tree/v4.0.0-rc2)
 
-2. If you want to modify the rules in any meaningful way, it is recommended that you download the files locally and modify before replacing the configmap. In OWASP, it is recommended you disable rules or change configuration by modifying a set of specific metadata files and exclusion files, and not modify any of the main rule files directly. You can, of course, decide to replace the rule set entirely with your own set of custom rules. This is completely fine once the rules are written in the same SecRule syntax understood by ModSecurity. We recommend you keep a version of your rule files safe in version control like git.
+These files can be customized if desired. Add all your customizations directly under `tigera.conf`:
 
-To download and modify the rule files:
+```bash
+kubectl edit cm -n tigera-operator modsecurity-ruleset
+``` 
 
-1. Clone our operator code which contains the ConfigMap source.
-
-  ```bash
-  git clone --depth=1 https://github.com/tigera/operator 
-  cd operator
-  ```
-2. Change directory into the actual modsec rule set files we use.
-
-  ```bash
-  cd pkg/render/applicationlayer/modsec-core-ruleset
-  ```
-3. Make the changes you want in the setup, conf or exclusion files and save.
-4. Create a ConfigMap.
-
-  ```bash
-  kubectl create cm --dry-run=client --from-file=. -o yaml -n tigera-operator modsecurity-ruleset > $HOME/my-tigera-waf-ruleset.yaml
-  ```
-5. Apply the ConfigMap to your cluster.
-
-  ```bash
-  kubectl replace -f $HOME/my-tigera-waf-ruleset.yaml
-  ```
-
-After you do these steps, the `modsecurity-ruleset` ConfigMap will be replaced in the `tigera-operator` namespace, 
-which then triggers a rolling restart of your L7 pods. This means that the HTTP connections going through L7 pods at the time of pod termination will be (RST) reset. 
+After editing this ConfigMap successfully, the `modsecurity-ruleset` ConfigMap will be replaced in the `tigera-operator` namespace,
+which then triggers a rolling restart of your L7 pods. This means that the HTTP connections going through L7 pods at the time of pod termination will be (RST) reset.
 
 :::note
 
 It is important to adhere to  the [Core Rule Set documentation](https://coreruleset.org/docs) on how to edit the behaviour of
  your WAF. A good place to begin at is the [Installing Core Rule Set](https://coreruleset.org/docs/deployment/install/).
 
-In many scenarios, the default example CRS configuration will be a good enough starting point. It is recommended to review the example configuration file before 
+In many scenarios, the default example CRS configuration will be a good enough starting point. It is recommended to review the example configuration file before
 you deploy it to make sure it’s right for your environment.
 :::
 
-#### Set WAF rule to block traffic
-By default WAF will not block a request even if it has matching rule violations. The rule engine is set to `DetectionOnly`. You can configure to block traffic instead with an `HTTP 403 Forbidden` response status code when the combined matched rules scores exceed a certain threshold. 
+#### Customization options
 
-1. Edit the configmap: 
+##### Set WAF to block traffic
+By default WAF will not block a request even if it has matching rule violations. The rule engine is set to `DetectionOnly`. You can configure to block traffic instead with an `HTTP 403 Forbidden` response status code when the combined matched rules scores exceed a certain threshold.
+
+1. Edit the configmap:
    ```bash
    kubectl edit cm -n tigera-operator modsecurity-ruleset
    ```
 2. Look for `SecRuleEngine DetectionOnly` and change it to `SecRuleEngine On`.
-3. Save your changes. This triggers a rolling update of the L7 pods. 
+3. Save your changes. This triggers a rolling update of the L7 pods.
 
 | Action | Description                                                                                                                                                             | Disruptive? |
 | ------ | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ----------- |
 | DetectionOnly | Traffic is not denied nor dropped. {{prodname}}  will log events. | No
 | On     | Denies HTTP traffic. {{prodname}}  will log the event in Security Events. | Yes          |
-| Off    | Be cautious about using this option. Traffic is not denied, and there are no events. |No                                                                      | Yes         |                                         
+| Off    | Be cautious about using this option. Traffic is not denied, and there are no events. |No                                                                      | Yes         |
 
-#### Change anomaly scoring threshold 
 
-The default scoring threshold is set to 100, a high value that is unlikely to result in blocked requests, even if blocking mode is enabled. A critical rule violation scores 5 by default so a single HTTP request would need many rule violations to pass the default threshold of 100. You are encouraged to fine-tune and lower this threshold value iteratively until you are happy with the requests being allowed and denied for your cluster. 
+##### Other basic customizations
 
-1. Edit the `crs-setup.conf` file and set `tx.inbound_anomaly_score_threshold` to the value of your choice: 
-   ```bash
-     SecAction \
-      "id:900110,\
-      phase:1,\
-      nolog,\
-      pass,\
-      t:none,\
-      setvar:tx.inbound_anomaly_score_threshold=100,\
-      setvar:tx.outbound_anomaly_score_threshold=100"
-   ```
+For basic customizations, it's best to add it after all the includes in `tigera.conf`. In fact, this is the reason why the `SecRuleEngine` directive and the rest of [our customizations](https://github.com/tigera/operator/blob/master/pkg/render/applicationlayer/embed/coreruleset/tigera.conf#L8-L17) are situated there.
 
-These are the default scoring points for each severity level, applied to each rule individually.
-The lower the overall anomaly scoring threshold value is, the more likely it is that traffic will be denied. 
+An example is adding a sampling mode. For that, the `tigera.conf` will look like this:
 
-| Severity | Score                                                                                                                                                             | Description |
-| ------ | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ----------- |
-| Critical | 5 | Mostly generated by the application attack rules (93x and 94x files)
-| Error     | 4 | Generated mostly from outbound leakage rules (95x files) |
-| Warning    | 3 | Generated mostly by malicious client rules (91x files) | 
-| Notice    | 2 | Generated mostly by the protocol rules (92x files) | 
+```bash
+# Core Rule Set activation
+Include @coraza.conf-recommended
+Include @crs-setup.conf.example
+Include @owasp_crs/*.conf
 
-#### Change other default settings
+SecRuleEngine DetectionOnly
 
-Core Rule Set has several default values and settings that you can fine-tune. Example: Rule 920420 checks the HTTP request Content-Type header against a list of allowed values. You may want to allow traffic through the WAF that has a certain Content-Type that is not allowed by default, e.g. you may have Content-Types in your micro-services workloads that are not allowed by default.
+# --- all customizations appear below this line, unless they need a specific loading order like plugins ---
 
-1. Edit the `crs-setup.conf` file and add a new Content-Type by modifying `id:900220` and appending to the default list named `tx.allowed_request_content_type`
+# --- Add sampling mode
+# Read about sampling mode here https://coreruleset.org/docs/concepts/sampling_mode/
+SecAction "id:900400,\
+  phase:1,\
+  pass,\
+  nolog,\
+  setvar:tx.sampling_percentage=50"
+```
 
-  ```bash
-    SecAction \
-     "id:900220,\
-      phase:1,\
-      nolog,\
-      pass,\
-      t:none,\
-      setvar:'tx.allowed_request_content_type=|application/x-www-form-urlencoded| |multipart/form-data| |multipart/related| |text/xml| |application/xml| |application/soap+xml| |application/json| |application/cloudevents+json| |application/cloudevents-batch+json| |application/grpc|'"
-  ```
+Also you can disable certain rules here:
 
-#### Disable certain rules 
+```bash
+# --- disable 'Request content type is not allowed by policy'
+SecRuleRemoveById 920420
+```
 
-You may want to disable a rule entirely. For example, if you find the allowed Content-Type rule mentioned above too restrictive, you can disable it unconditionally by changing `RESPONSE-999-EXCLUSION-RULES-AFTER-CRS.conf.example` and renaming that file to remove the `.example`:
+Change anomaly scoring threshold:
 
-1. Edit `RESPONSE-999-EXCLUSION-RULES-AFTER-CRS.conf.example` and add a line such as the following, referencing the rule ID you want to disable.
+```bash
+  SecAction \
+  "id:900110,\
+  phase:1,\
+  nolog,\
+  pass,\
+  t:none,\
+  setvar:tx.inbound_anomaly_score_threshold=25,\
+  setvar:tx.outbound_anomaly_score_threshold=20"
+```
 
-  ```bash
-  SecRuleRemoveById 920420
-  ```
-2. Rename `RESPONSE-999-EXCLUSION-RULES-AFTER-CRS.conf.example` to `RESPONSE-999-EXCLUSION-RULES-AFTER-CRS.conf` removing the *.example* in order for ModSecurity to load the file.
+Or even change rule action parameters or behavior. For example:
+
+ ```bash
+ # --- append to more allowed content types to request bodies
+SecAction \
+  "id:900220,\
+  phase:1,\
+  nolog,\
+  pass,\
+  t:none,\
+  setvar:'tx.allowed_request_content_type=|application/x-www-form-urlencoded| |multipart/form-data| |multipart/related| |text/xml| |application/xml| |application/soap+xml| |application/json| |application/cloudevents+json| |application/cloudevents-batch+json| |application/grpc|'"
+```
+
+
+##### Using Core Rule Set plugins
+
+Let's go with an example plugin: [Wordpress Rule Exclusions](https://github.com/coreruleset/wordpress-rule-exclusions-plugin/).
+
+Plugin files are the following:
+
+```
+wordpress-rule-exclusions-before.conf
+wordpress-rule-exclusions-config.conf
+```
+
+To include these files properly, structure your work directory like so:
+
+```
+tigera.conf
+wordpress-rule-exclusions-before.conf
+wordpress-rule-exclusions-config.conf
+```
+
+and then `tigera.conf` contents should be:
+
+```bash
+Include @coraza.conf-recommended
+
+Include /etc/modsecurity-ruleset/wordpress-rule-exclusions-config.conf
+Include /etc/modsecurity-ruleset/wordpress-rule-exclusions-before.conf
+
+Include @crs-setup.conf.example
+Include @owasp_crs/*.conf
+
+# if your plugin has an -after.conf, include them here
+# but wordpress rule exclusions doesn't so we're adding a comment placeholder
+# Include /etc/modsecurity-ruleset/wordpress-rule-exclusions-after.conf
+
+SecRuleEngine DetectionOnly
+```
+
+Then create and apply the configmap:
+
+```bash
+## create the configuration map itself
+kubectl create cm --dry-run=client \
+  --from-file=tigera.conf \
+  --from-file=wordpress-rule-exclusions-config.conf \
+  --from-file=wordpress-rule-exclusions-before.conf \
+  -n tigera-operator modsecurity-ruleset -o yaml  > rule set.configmap.yaml
+
+## replace active configmap
+kubectl replace -f rule set.configmap.yaml
+```
+
+Read more about the order of execution for plugins here: https://coreruleset.org/docs/concepts/plugins/
 
 ### View WAF events
 
@@ -296,7 +338,7 @@ To view WAF events in a centralized security events dashboard, go to: **Threat d
 
 #### Kibana
 
-To view WAF events in Kibana, select the `tigera_secure_ee_waf*` index pattern.
+To view WAF events In Kibana, select the `tigera_secure_ee_waf*` index pattern.
 
 #### Disable WAF for a service
 
@@ -308,26 +350,9 @@ kubectl annotate svc <service-name> -n <service-namespace> projectcalico.org/l7-
 
 ### Disable WAF feature from your cluster
 
-To safely disable WAF, determine how to handle ApplicationLayer features and follow the steps:
+To disable WAF, update the [ApplicationLayer](../reference/installation/api#operator.tigera.io/v1.ApplicationLayer) resource to include the `webApplicationFirewall` field, and ensure it is set to `Disabled`.
 
-#### Disable all ApplicationLayer features, including WAF
-
-```bash
-kubectl delete applicationlayer tigera-secure
-```
-
-#### Keep some ApplicationLayer features enabled
-
-To disable WAF but keep some ApplicationLayer features enabled, you must update the [ApplicationLayer](../reference/installation/api#operator.tigera.io/v1.ApplicationLayer) custom resource.
-
-Note that the [ApplicationLayer Specification](../reference/installation/api#operator.tigera.io/v1.ApplicationLayerSpec) can specify configuration for [Application Logging](../reference/installation/api#operator.tigera.io/v1.LogCollectionSpec) and [Application Layer Policy](../reference/installation/api#operator.tigera.io/v1.ApplicationLayerPolicyStatusType) also. 
-
-For the ApplicationLayer custom resource to be valid, at least one of these features have to be enabled, for example:
-
-
-##### Valid YAML
-
-WAF enabled, ALP disabled, and Log collection is unspecified (and the default is disabled)
+Example:
 
 ```yaml
 apiVersion: operator.tigera.io/v1
@@ -336,18 +361,4 @@ metadata:
   name: tigera-secure
 spec:
   webApplicationFirewall: Disabled
-  applicationLayerPolicy: Enabled
-```
-
-###### Invalid YAML
-
-WAF and ALP both set as disabled, log collection is unspecified (and the default is disabled)
-```yaml
-apiVersion: operator.tigera.io/v1
-kind: ApplicationLayer
-metadata:
-  name: tigera-secure
-spec:
-  webApplicationFirewall: Disabled
-  applicationLayerPolicy: Disabled
 ```
