--- a/calico-cloud_versioned_docs/version-19-1/visibility/elastic/flow/datatypes.mdx
+++ b/calico-cloud_versioned_docs/version-19-1/visibility/elastic/flow/datatypes.mdx
@@ -102,9 +102,9 @@ Where,
     the tier that apply to the endpoint.
   * `-2` means "unknown". The rule index was not recorded.
 
-### Flow log example, with **no aggregation**
+### Flow log example, with `no aggregation`
 
-A flow log with aggregation level 0, **`no aggregation`**, might look like:
+A flow log with aggregation level 0, `no aggregation`, might look like:
 
 ```
   {
@@ -158,9 +158,9 @@ A flow log with aggregation level 0, **`no aggregation`**, might look like:
   }
 ```
 
-The log shows an incoming connection reported by the "Destination" node, allowed by a policy on port 80. The **`start_time`** and **`end_time`** 
+The log shows an incoming connection reported by the destination node, allowed by a policy on port 80. The **`start_time`** and **`end_time`** 
 describe the aggregation period (5 min.) During this interval, one flow (**`"num_flow": 1`**) was recorded. At higher aggregation levels, flows from 
 endpoints performing the same operation and originating from the same Deployment/ReplicaSet are grouped into a single log. In this example, the 
-common source endpoints are prefixed with **`access-6b687c8dcb-`**. Parameters like **`source_ip`** may be dropped and set to **`null`** depending on 
+common source endpoints that are prefixed with **`access-6b687c8dcb-`**. Parameters like **`source_ip`** may be dropped and set to **`null`**, depending on 
 the aggregation level. As aggregation levels increase, more flows will be grouped together based on your data. For more details on aggregation 
 levels, see [configure flow log aggregation](./aggregation.mdx).
