--- a/calico-enterprise_versioned_docs/version-3.19-2/visibility/elastic/flow/aggregation.mdx
+++ b/calico-enterprise_versioned_docs/version-3.19-2/visibility/elastic/flow/aggregation.mdx
@@ -52,7 +52,7 @@ and `client-b` are combined into a single flow log. This aggregation level is ca
 
 Finally, with `AnyConnectionBetweenSamePodPrefixes` we combine source and destination pods that are part of the same pod controller. With level 3, the flow logs
 are aggregated by the destination port and protocol, as long as they originate from pods with the same pod-prefix and destined for pods of the same 
-pod-prefix. All logs previously distinct, are aggregated into a single flow log (see the last row).
+pod-prefix. Previously distinct logs are aggregated into a single flow log (see the last row).
 
 |                          |           | **Src Traffic**  | |          | **Dst Traffic**  | |          | **Packet counts**      | |
 |--------------------------|-----------|----------|---------|----------|----------|---------|----------|------------|-------------|
@@ -87,7 +87,7 @@ kubectl get felixconfiguration -o yaml
 Before [changing the default aggregation level](../../../reference/resources/felixconfig.mdx#aggregationkind), note the following:
 
 - Although any change in aggregation level affects flow log volume, lowering the aggregation number (especially to `0` for no aggregation) will cause significant impacts to log storage. If you allow more flow logs, ensure that you provision more log storage.
-- Verify that the parameters that you want to see in your aggregation level, are not already [filtered](filtering.mdx).
+- Verify that the parameters that you want to see in your aggregation level are not already [filtered](filtering.mdx).
 
 ### Troubleshoot logs with aggregation levels
 
