Updates to docusaurus.config.js and release notes

--- a/calico-cloud_versioned_docs/version-19-2/release-notes/index.mdx
+++ b/calico-cloud_versioned_docs/version-19-2/release-notes/index.mdx
@@ -9,6 +9,14 @@ title: Release notes
 
 ### New features and enhancements
 
+#### Jira integration for Image Assurance scan results
+
+We added a way to create and assign Jira issues directly from your Image Assurance scan results page.
+You can filter and prioritize vulnerabilities, and then assign the remediation work to members of your team.
+Calico Cloud populates the information you need, including a CSV file with detailed information about the vulnerabilities in your packages.
+
+For more information, see [Creating Jira issues for scan results](../image-assurance/creating-jira-issues-for-scan-results.mdx)
+
 #### Security events dashboard
 
 A new dashboard summarizes security events and helps practitioners easily understand how events map across namespaces, MITRE techniques, event types, and attack phases. This allows first responders to quickly make sense of potential threats, engage the right stakeholders, and start the incident response and investigation process.
