Add CC v19.3 issues and bug fixes
Also adds warning about uninstall not working on AKS w/Calico clusters

--- a/calico-cloud/get-started/connect/requirements/aks.mdx
+++ b/calico-cloud/get-started/connect/requirements/aks.mdx
@@ -58,6 +58,13 @@ Please click the question icon in Manager UI under the user icon in the upper ri
 
 :::
 
+:::warning
+
+If your cluster already has Calico installed by AKS and managed by AddonManager, the standard [uninstall](../../../operations/disconnect)
+is not supported. You will need to reach out to support to create a plan to uninstall {{prodname}}.
+
+:::
+
 ## Remove taints from Linux node pools
 
 Hybrid clusters on AKS may have taints applied to Linux nodes that prevent {{prodname}} from scheduling pods on those nodes.
