--- a/calico-cloud_versioned_docs/version-19-2/release-notes/index.mdx
+++ b/calico-cloud_versioned_docs/version-19-2/release-notes/index.mdx
@@ -56,7 +56,11 @@ For more information, see [Deploying WAF with an ingress gateway ](../threat/dep
 
 ### Known issues
 
-### Bug fixes 
+* It is no longer supported to uninstall {{prodname}} on a cluster that before connecting to {{prodname}} it had Calico managed with AddonManager. This includes AKS clusters that had Calico installed and managed by AKS.
+
+### Bug fixes
+
+* Fixed an issue where occasionally the status of a cluster would not be updated when the cluster connected resulting in auth tokens and license not being updated in the cluster.
 
 ## April 30, 2024 (version 19.2.0)
 
