--- a/calico-cloud_versioned_docs/version-19-2/operations/disconnect.mdx
+++ b/calico-cloud_versioned_docs/version-19-2/operations/disconnect.mdx
@@ -28,6 +28,13 @@ to allow this necessary traffic.
 
 :::
 
+:::warning
+
+If your cluster began with Calico installed and managed by AKS with AddonManager, this uninstall process will
+not be successful. You will need to reach out to your support contact to create a plan to uninstall {{prodname}}.
+
+:::
+
 ### Before you begin
 
 * You have `kubectl` administrator access to the cluster you want to migrate to Calico Open Source.
