Compliance opt in changes

--- a/calico-cloud/compliance/compliance-reports-cis.mdx
+++ b/calico-cloud/compliance/compliance-reports-cis.mdx
@@ -28,7 +28,7 @@ We recommend that you review the CIS benchmark best practices for securing clust
 
 **Required**
 
-* You enabled [Enable compliance reports](../compliance/enable-compliance)
+* You [Enabled compliance reports](../compliance/enable-compliance)
 
 **Limitations**
 
