--- a/calico-cloud/compliance/overview.mdx
+++ b/calico-cloud/compliance/overview.mdx
@@ -56,7 +56,7 @@ Compliance reports provide the following high-level information:
 
 **Required**
 
-* You enabled [Enable compliance reports](../compliance/enable-compliance)
+* You [Enabled compliance reports](../compliance/enable-compliance)
 
 - Ensure that all nodes in your Kubernetes clusters are time-synchronized using NTP or similar (for accurate audit log timestamps)
 
