--- a/calico-enterprise_versioned_docs/version-3.18-2/release-notes/index.mdx
+++ b/calico-enterprise_versioned_docs/version-3.18-2/release-notes/index.mdx
@@ -201,3 +201,21 @@ Calico Enterprise 3.18.3 is now available. This release includes bug fixes and i
 #### Updating
 
 To update an existing installation of {{prodname}} 3.18, see [Install a patch release](../getting-started/manifest-archive.mdx).
+
+
+### Calico Enterprise 3.18.4 bug fix update
+
+June 14, 2024
+
+Calico Enterprise 3.18.4 is now available. This release includes bug fixes and improvements.
+
+#### Bug fixes
+
+* Fixes a bug in Egress gateways where IP rules were not updated when a pod's IP address changes.
+* Fixes an issue where the curator job crash-loops due to a missing module.
+* Fixes an issue where SecurityContextConstraints for components were incorrect or missing.
+* Security updates.
+
+#### Updating
+
+To update an existing installation of {{prodname}} 3.18, see [Install a patch release](../getting-started/manifest-archive.mdx).
