--- a/calico-enterprise/compliance/enable-compliance.mdx
+++ b/calico-enterprise/compliance/enable-compliance.mdx
@@ -18,6 +18,10 @@ The compliance system consists of several key components that work together to e
  - `compliance-server` : Offers API for report management and enforces RBAC.
  - `compliance-benchmarker` : Runs CIS Kubernetes Benchmark checks on each node to ensure secure deployment.
 
+**Required**
+
+* For managed clusters, ensure that compliance reporting is enabled in the management cluster.
+
 ### Enable compliance reports using kubectl
 
 * Create a compliance custom resource, named `tigera-secure`, in the cluster.
