--- a/calico-enterprise/getting-started/upgrading/upgrading-enterprise/kubernetes-upgrade-tsee/helm.mdx
+++ b/calico-enterprise/getting-started/upgrading/upgrading-enterprise/kubernetes-upgrade-tsee/helm.mdx
@@ -110,6 +110,19 @@ These steps differ based on your cluster type. If you are unsure of your cluster
         }
     </CodeBlock>
 
+1. Starting from version 3.20, certain features are made optional. Review the `values.yaml` file for optional features with flags set to `enabled: false`. If you wish to maintain the enable status, update the flag to `enabled: true` in the `values.yaml` before executing the `helm upgrade`.
+
+    <CodeBlock language='bash'>
+        {'{{version}}' === 'master'
+            ? (
+            `helm show values ./tigera-operator-v0.0.tgz >values.yaml`
+            )
+            : (
+            `helm show values ./tigera-operator-{{chart_version_name}}.tgz >values.yaml`
+            )
+        }
+    </CodeBlock>
+
 1. Run the Helm upgrade command for `tigera-operator` and make sure to either update `values.yaml` with your configuration or use custom `values.yaml` file:
 
   <CodeBlock language='bash'>
