--- a/calico-enterprise/getting-started/upgrading/upgrading-enterprise/kubernetes-upgrade-tsee/helm.mdx
+++ b/calico-enterprise/getting-started/upgrading/upgrading-enterprise/kubernetes-upgrade-tsee/helm.mdx
@@ -110,7 +110,7 @@ These steps differ based on your cluster type. If you are unsure of your cluster
         }
     </CodeBlock>
 
-1. Starting from version 3.20, certain features are made optional. Review the `values.yaml` file for optional features with flags set to `enabled: false`. If you wish to maintain the enable status, update the flag to `enabled: true` in the `values.yaml` before executing the `helm upgrade`.
+1. Starting from version 3.20, certain features are made optional. if you are using the default `values.yaml`, review the file for optional features with flags set to `enabled: false`. If you wish to maintain the enable status, update the flag to `enabled: true` in the `values.yaml` before executing the `helm upgrade`.
 
     <CodeBlock language='bash'>
         {'{{version}}' === 'master'
