--- a/calico-enterprise_versioned_docs/version-3.19-2/release-notes/index.mdx
+++ b/calico-enterprise_versioned_docs/version-3.19-2/release-notes/index.mdx
@@ -134,4 +134,24 @@ Calico Enterprise 3.19.0-2.0 is now available as an early preview release.
 This release is for previewing and testing purposes only.
 It is not supported for use in production.
 
-To update an existing installation of Calico Enterprise 3.18, see [Install a patch release](../getting-started/manifest-archive.mdx).
+### Calico Enterprise 3.19.1 GA
+
+June 20, 2024
+
+Calico Enterprise 3.19.1 is now available as a GA release.
+
+This release is supported for use in production.
+
+#### Updates
+
+* License usage data is now collected and stored locally in the cluster
+
+#### Bug fixes
+
+* Fixes Security Event Exceptions not applying properly when using Multi-Cluster Management
+* Fixes an issue where Egress Gateways don't properly handle changes in a pod's IP address
+* Fixes Managed Cluster connection status not always being correctly reported
+* Verify CNI plugin installed correctly
+* Security updates
+
+To update an existing installation of Calico Enterprise 3.19, see [Install a patch release](../getting-started/manifest-archive.mdx).
