Add Install/upgrade notes for optional flags

--- a/calico-enterprise/getting-started/install-on-clusters/kubernetes/helm.mdx
+++ b/calico-enterprise/getting-started/install-on-clusters/kubernetes/helm.mdx
@@ -79,6 +79,19 @@ To install a standard {{prodname}} cluster with Helm:
 
 1. [Configure a storage class for Calico Enterprise](../../../operations/logstorage/create-storage).
 
+1. (Optional) Compliance and packetcapture features are optional. To enable these features, review the `values.yaml` file and set the flag to `enabled: true`. In the next step, use this modified `values.yaml` for the helm install.
+
+    <CodeBlock language='bash'>
+        {'{{version}}' === 'master'
+            ? (
+            `helm show values ./tigera-operator-v0.0.tgz >values.yaml`
+            )
+            : (
+            `helm show values ./tigera-operator-{{chart_version_name}}.tgz >values.yaml`
+            )
+        }
+    </CodeBlock>
+
 1. Install the Tigera {{prodname}} operator and custom resource definitions using the Helm 3 chart:
 
   <CodeBlock language='bash'>
