--- a/calico-enterprise/getting-started/install-on-clusters/kubernetes/options-install.mdx
+++ b/calico-enterprise/getting-started/install-on-clusters/kubernetes/options-install.mdx
@@ -30,11 +30,12 @@ Each API in the operator.tigera.io API group configures the installation of a di
 | **APIServer**                   | Installs the Tigera API server, which enables access to the full set of [{{prodname}} APIs](../../../reference/installation/api.mdx).                                                                        |
 | **LogStorage**                  | Configures installation of storage for {{prodname}} flow and DNS logs.                                                                                                                                       |
 | **LogCollector**                | Configures collection of those logs from the cluster, including optional configuration to backup logs in additional stores.                                                                                  |
-| **Compliance**                  | Configures the {{prodname}} compliance reporting feature.                                                                                                                                                    |
 | **IntrusionDetection**          | Configures the {{prodname}} intrusion detection feature.                                                                                                                                                     |
 | **Manager**                     | Installs the {{prodname}} Manager web UI.                                                                                                                                                                    |
 | **ManagementClusterConnection** | Configures a connection to the management cluster for managed clusters.                                                                                                                                      |
 | **TigeraStatus**                | Displays conditions for a component (available, progressing, or degraded).                                                                                                                                   |
+| **Compliance**                  | Configures the {{prodname}} compliance reporting feature (Optional). For managed clusters, ensure compliance reporting is enabled first on the management cluster.                                           |
+| **PacketCaptureAPI**            | Configures the {{prodname}} packet capture feature (Optional).                                                                                                                                               |
 
 ### Additional configuration
 
