--- a/calico-enterprise/getting-started/install-on-clusters/kubernetes/quickstart.mdx
+++ b/calico-enterprise/getting-started/install-on-clusters/kubernetes/quickstart.mdx
@@ -115,6 +115,12 @@ A Linux host that meets the following requirements.
        --from-file=.dockerconfigjson=<path/to/pull/secret>
    ```
 
+1. (Optional) Compliance and packet capture features are optional. To enable these features during installation, download and review the custom-resources.yaml file. Uncomment the necessary CRs and use this custom-resources.yaml for installation.
+
+    ```bash
+   curl -O -L {{filesUrl}}/manifests/custom-resources.yaml
+   ```
+
 1. Install the Tigera custom resources. For more information on configuration options available in this manifest, see [the installation reference](../../../reference/installation/api.mdx).
 
    ```bash
