--- a/calico-enterprise/getting-started/upgrading/upgrading-enterprise/kubernetes-upgrade-tsee/helm.mdx
+++ b/calico-enterprise/getting-started/upgrading/upgrading-enterprise/kubernetes-upgrade-tsee/helm.mdx
@@ -110,7 +110,21 @@ These steps differ based on your cluster type. If you are unsure of your cluster
         }
     </CodeBlock>
 
-1. Starting from version 3.20, certain features are made optional. if you are using the default `values.yaml`, review the file for optional features with flags set to `enabled: false`. If you wish to maintain the enable status, update the flag to `enabled: true` in the `values.yaml` before executing the `helm upgrade`.
+1. (Optional) Compliance and packetcapture features are optional. To enable or maintain the enabled status, review the `values.yaml` file and set the flag to `enabled: true`.
+
+    If your `values.yaml` configuration does not include `compliance` or `packetCaptureAPI`, add them to the configuration and set to `enabled: true`
+
+    ```
+    packetCaptureAPI:
+        enabled: true
+
+    compliance:
+        enabled:true
+    ```
+
+    or
+
+    If you are using default `values.yaml`, copy the custom `values.yaml` and update compliance and packetCaptureAPI's `enabled`  to `true`. Then, replace `<path-to-values.yaml>` in the next step with this modified `values.yaml` for the helm upgrade.
 
     <CodeBlock language='bash'>
         {'{{version}}' === 'master'
