--- a/calico/networking/ipam/ippools.mdx
+++ b/calico/networking/ipam/ippools.mdx
@@ -31,15 +31,16 @@ kind: Installation
 metadata:
   name: default
 spec:
-  ipPools:
-  - name: pool-zone-1
-    cidr: 192.168.0.0/24
-    encapsulation: VXLAN
-    nodeSelector: "zone == 'zone-1'"
-  - name: pool-zone-2
-    cidr: 192.168.1.0/24
-    encapsulation: VXLAN
-    nodeSelector: "zone == 'zone-2'"
+  calicoNetwork:
+    ipPools:
+    - name: pool-zone-1
+      cidr: 192.168.0.0/24
+      encapsulation: VXLAN
+      nodeSelector: "zone == 'zone-1'"
+    - name: pool-zone-2
+      cidr: 192.168.1.0/24
+      encapsulation: VXLAN
+      nodeSelector: "zone == 'zone-2'"
 ```
 
 After installing {{prodname}}, you can confirm the IP pools were created by using the following command:
@@ -60,7 +61,8 @@ kind: Installation
 metadata:
   name: default
 spec:
-  ipPools: []
+  calicoNetwork:
+    ipPools: []
 ```
 
 With this configuration, the operator will wait for you to create IP pools before installing {{prodname}} components.
