--- a/use-cases/clustermesh.mdx
+++ b/use-cases/clustermesh.mdx
@@ -73,17 +73,10 @@ To see whatâ€™s possible with all Calico products, you can read this blog post â
 
 Cluster mesh can be an advanced topic, so we recommend you understand the different components and configurations before implementing this in your own environment.
 
-### Federated endpoint identity
-
-Allow a local Kubernetes cluster to include the workload endpoints (pods) and host endpoints of a remote cluster in the calculation of local network policies applied on each node of the local cluster.
-
-### Federated services
-
-Enable a local Kubernetes Service to populate with Endpoints selected from both local cluster and remote cluster Services.
-
-### Multi-cluster networking
-
-Establish an overlay network between clusters to provide cross-cluster connectivity with Calico Enterprise.
+Before getting into the concepts, this is what we mean by:
+* Federated endpoint identity - allow a local Kubernetes cluster to include the workload endpoints (pods) and host endpoints of a remote cluster in the calculation of local network policies applied on each node of the local cluster.
+* Federated services - enable a local Kubernetes Service to populate with Endpoints selected from both local cluster and remote cluster Services.
+* Multi-cluster networking - establish an overlay network between clusters to provide cross-cluster connectivity with Calico Enterprise.
 
 ### Cluster mesh networking
 
