DOCS-2215: Publication prep for CC 19.4.0

--- a/calico-cloud_versioned_docs/version-19-2/release-notes/index.mdx
+++ b/calico-cloud_versioned_docs/version-19-2/release-notes/index.mdx
@@ -5,6 +5,18 @@ title: Release notes
 
 # Calico Cloud release notes
 
+## July 9, 2024 (version 19.4.0)
+
+## New features and enhancements
+
+*
+*
+
+## Bug fixes
+
+*
+*
+
 ## June 11, 2024 (version 19.3.0)
 
 ### New features and enhancements
