--- a/calico-cloud/reference/resources/globalalert.mdx
+++ b/calico-cloud/reference/resources/globalalert.mdx
@@ -60,7 +60,7 @@ spec:
 | severity      | Severity of the alert for display in Manager.                                                                                                                                            | int                                                         | yes                                       | 1 - 100                      |
 | dataSet       | Which data set to execute the alert against.                                                                                                                                             | string                                                      | if `type` is `RuleBased`                  | audit, dns, flows, l7, vulnerability        |
 | period        | How often the query defined will run, if `type` is `RuleBased`.                                                                                                                          | duration                                                    | no                                        | 1h 2m 3s                     | 5m, 15m if `type` is `RuleBased` |
-| lookback      | How much data to gather at once. Must exceed audit log flush interval, `dnsLogsFlushInterval`, or `flowLogsFlushInterval` as appropriate.                                                | duration                                                    | no                                        | 1h 2m 3s                     | 10m                              |
+| lookback      | Specifies how far back in time data is to be collected. Must exceed audit log flush interval, `dnsLogsFlushInterval`, or `flowLogsFlushInterval` as appropriate.                                                | duration                                                    | no                                        | 1h 2m 3s                     | 10m                              |
 | query         | Which data to include from the source data set. Written in a domain-specific query language. See the query section below.                                                                | string                                                      | no                                        |
 | aggregateBy   | An optional list of fields to aggregate results.                                                                                                                                         | string array                                                | no                                        |
 | field         | Which field to aggregate results by if using a metric other than count.                                                                                                                  | string                                                      | if metric is one of avg, max, min, or sum |
