--- a/calico-cloud_versioned_docs/version-19-2/image-assurance/set-up-alerts.mdx
+++ b/calico-cloud_versioned_docs/version-19-2/image-assurance/set-up-alerts.mdx
@@ -71,6 +71,7 @@ spec:
   description: 'Vulnerabilities for namespace tigera-elasticsearch'
   severity: 100
   period: 30m
+  lookback: 30m
   dataSet: vulnerability
   query: result="Fail" AND namespace="tigera-elasticsearch"
   metric: count
