--- a/calico-cloud_versioned_docs/version-19-2/release-notes/index.mdx
+++ b/calico-cloud_versioned_docs/version-19-2/release-notes/index.mdx
@@ -5,6 +5,23 @@ title: Release notes
 
 # Calico Cloud release notes
 
+## July 9, 2024 (version 19.4.0)
+
+## New features and enhancements
+
+### Bulk vulnerability exceptions for Image Assurance
+
+We added a way to efficiently add large numbers of vulnerability exceptions to your Image Assurance scan results.
+Instead of creating exceptions one by one, you can add them all at once by uploading a CSV file with the vulnerability definitions.
+
+For more information, see [Exclude vulnerabilities from scan results](../image-assurance/exclude-vulnerabilities-from-scan-results.mdx).
+
+## Bug fixes
+
+* Previously, defining new values for the crawdad daemon by using the ImageAssurance custom resource had no effect, and the default values remained in place.
+  This problem is now fixed.
+* We fixed a bug that caused problems during Helm upgrades from Calico Cloud versions earlier than 19.1.0.
+
 ## June 11, 2024 (version 19.3.0)
 
 ### New features and enhancements
